--- a/index.html
+++ b/index.html
@@ -13,15 +13,30 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Blog</a></li>
-          <li><button class="btn-primary ">Hire me</button></li>
+          <li><button class="btn-primary">Hire me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3>Hi,i am</h3>
+          <h1>Abir Hossen</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+            tempore et, eum rerum dolore voluptatibus non dolor sapiente.
+            Doloribus rerum deserunt quo doloremque officiis cum fugit delectus
+            iste! Saepe, doloribus!
+          </p>
+          <button class="btn-primary">Download Cv</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img src="images/hardy.png" alt="profile picture" class="profile-pic" />
+      </div>
     </header>
     <main></main>
     <footer></footer>
