--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-          <h3>Hi,i am</h3>
-          <h1>Abir Hossen</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-            tempore et, eum rerum dolore voluptatibus non dolor sapiente.
-            Doloribus rerum deserunt quo doloremque officiis cum fugit delectus
-            iste! Saepe, doloribus!
+          <h3 class="banner-greeting">Hi,i am</h3>
+          <h1 class="banner-title">Abir Hossen</h1>
+          <p class="banner-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
           </p>
           <button class="btn-primary">Download Cv</button>
           <button class="btn-primary">Contact</button>
@@ -38,7 +36,17 @@
         <img src="images/hardy.png" alt="profile picture" class="profile-pic" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ea qui
+          quisquam quae, culpa dolor cupiditate ipsum, magni, atque mollitia
+          corrupti labore. Dignissimos facere deleniti, quaerat maxime voluptate
+          adipisci assumenda?
+        </p>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
