what i do section done

--- a/index.html
+++ b/index.html
@@ -64,6 +64,60 @@
           </div>
         </div>
       </section>
+
+      <section class="skills">
+        <h3 class="section-title">What i do</h3>
+        <p class="section-descriptions">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skill">
+          <div class="skill-item">
+            <img src="images/icons/js.png" alt="" class="skill-item-title" />
+            <div class="skill-name">Vanilla JavaScript</div>
+            <div class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </div>
+          </div>
+          <div class="skill-item">
+            <img src="images/icons/react.png" alt="" class="skill-item-title" />
+            <div class="skill-name">React</div>
+            <div class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </div>
+          </div>
+          <div class="skill-item">
+            <img
+              src="images/icons/nodejs.png"
+              alt=""
+              class="skill-item-title"
+            />
+            <div class="skill-name">Node.js</div>
+            <div class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </div>
+          </div>
+          <div class="skill-item">
+            <img src="images/icons/mongo.png" alt="" class="skill-item-title" />
+            <div class="skill-name">MongoDB</div>
+            <div class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section></section>
     </main>
     <footer></footer>
   </body>
