--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header class="header">
@@ -191,6 +195,36 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="info">
+          <h2 class="footer-heading">Lets Connect</h2>
+          <p class="footer-description">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="icons"></div>
+        </div>
+        <div class="contact">
+          <h2 class="footer-heading">Let’s Message me</h2>
+          <input
+            class="from-input"
+            type="text"
+            placeholder="Your name"
+            name=""
+            id=""
+          />
+          <input
+            class="from-input"
+            type="email"
+            placeholder="Your Email"
+            name=""
+            id=""
+          />
+          <textarea class="from-input" placeholder="Message"></textarea>
+          <button class="btn-primary">Submit</button>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
